# rustlings-web

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cloudflare-worker.mjs  fly.toml  package-lock.json  package.json  wrangler.jsonc
api/: .gitignore  Cargo.toml  Dockerfile  README.md  com.rustlings-api.sync.plist  fly.toml
api/migrations/: 001_init.sql  002_add_active_and_sync_log.sql
api/src/: auth.rs  db.rs  github.rs  main.rs  models.rs  runner.rs  state.rs  sync.rs
api/src/handlers/: auth.rs  mod.rs  rustlings.rs  user.rs
ui/: .env.local.example  README.md  next.config.js  package.json  tsconfig.tsbuildinfo
ui/src/app/: globals.css  layout.tsx
ui/src/app/login/: page.tsx
ui/src/app/rustlings/: page.tsx
ui/src/app/rustlings/[slug]/: page.tsx
ui/src/components/: CategoryCard.tsx  CodeEditor.tsx  ExerciseCard.tsx  FilterTabs.tsx  ProgressPanel.tsx  Sidebar.tsx
ui/src/lib/: api.ts  assets.ts  auth.ts
