[package]
name = "rustlings_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
flate2 = "1"
tar = "0.4"
